feat: 初始化博客基本的配置

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 一日寒小站
-subtitle: ''
-description: '贵有恒何必三更起五更睡，最无益只怕一日曝十日寒'
+subtitle: '贵有恒何必三更起五更睡，最无益只怕一日曝十日寒'
+description: ''
 keywords:
 author: 一日寒
 language: zh-CN
